--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/motion_layout"
+    app:layoutDescription="@xml/player_scene"
     tools:context=".MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -17,8 +20,8 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlways"
-                android:background="@color/white">
+                android:background="@color/white"
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -36,11 +39,100 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_video"
+            android:id="@+id/rv_video_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_video_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        app:layout_constraintDimensionRatio="H,16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/player_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/black"
+        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
+        app:layout_constraintEnd_toEndOf="@id/cl_video_container"
+        app:layout_constraintStart_toStartOf="@id/cl_video_container"
+        app:layout_constraintTop_toTopOf="@id/cl_video_container" />
+
+    <TextView
+        android:id="@+id/tv_video_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/black"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
+        app:layout_constraintEnd_toStartOf="@id/iv_control"
+        app:layout_constraintStart_toEndOf="@id/player_view"
+        app:layout_constraintTop_toTopOf="@id/cl_video_container" />
+
+    <ImageView
+        android:id="@+id/iv_control"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:padding="10dp"
+        android:src="@drawable/baseline_play_arrow"
+        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
+        app:layout_constraintEnd_toStartOf="@+id/iv_hide"
+        app:layout_constraintTop_toTopOf="@id/cl_video_container"
+        tools:alpha="1" />
+
+    <ImageView
+        android:id="@+id/iv_hide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:padding="10dp"
+        android:src="@drawable/baseline_clear"
+        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
+        app:layout_constraintEnd_toEndOf="@id/cl_video_container"
+        app:layout_constraintTop_toTopOf="@id/cl_video_container"
+        tools:alpha="1"
+
+        />
+
+
+    <FrameLayout
+        android:id="@+id/fl_recycler_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_video_container" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_player"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/fl_recycler_container"
+        app:layout_constraintEnd_toEndOf="@id/fl_recycler_container"
+        app:layout_constraintStart_toStartOf="@id/fl_recycler_container"
+        app:layout_constraintTop_toTopOf="@id/fl_recycler_container" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_manu" />
+
+</androidx.constraintlayout.motion.widget.MotionLayout>
