ExoPlayerMotionLayout 커스텀 클래스 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<hs.project.comettube.ExoPlayerMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,8 +10,12 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -24,22 +28,23 @@
                 app:layout_scrollFlags="scroll|enterAlways">
 
                 <TextView
-                    android:id="@+id/tv_title"
+                    android:id="@+id/appBarTitleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="5dp"
+                    android:drawablePadding="3dp"
                     android:text="@string/app_name"
                     android:textColor="@color/black"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     app:drawableStartCompat="@drawable/baseline_local_play"
                     app:drawableTint="?attr/colorPrimary" />
 
             </androidx.appcompat.widget.Toolbar>
 
+
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_video_list"
+            android:id="@+id/videoListRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -47,7 +52,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_video_container"
+        android:id="@+id/videoPlayerContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
@@ -57,77 +62,75 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.exoplayer2.ui.PlayerView
-        android:id="@+id/player_view"
+        android:id="@+id/playerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-        app:layout_constraintEnd_toEndOf="@id/cl_video_container"
-        app:layout_constraintStart_toStartOf="@id/cl_video_container"
-        app:layout_constraintTop_toTopOf="@id/cl_video_container" />
+        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+        app:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+        app:layout_constraintStart_toStartOf="@id/videoPlayerContainer"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
+        app:resize_mode="fixed_width" />
 
     <TextView
-        android:id="@+id/tv_video_title"
+        android:id="@+id/videoTitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/black"
-        android:textSize="14dp"
-        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-        app:layout_constraintEnd_toStartOf="@id/iv_control"
-        app:layout_constraintStart_toEndOf="@id/player_view"
-        app:layout_constraintTop_toTopOf="@id/cl_video_container" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+        app:layout_constraintEnd_toStartOf="@id/controlButton"
+        app:layout_constraintStart_toEndOf="@id/playerView"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
     <ImageView
-        android:id="@+id/iv_control"
+        android:id="@+id/controlButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
         android:padding="10dp"
         android:src="@drawable/baseline_play_arrow"
-        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-        app:layout_constraintEnd_toStartOf="@+id/iv_hide"
-        app:layout_constraintTop_toTopOf="@id/cl_video_container"
+        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+        app:layout_constraintEnd_toStartOf="@id/hideButton"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
         tools:alpha="1" />
 
     <ImageView
-        android:id="@+id/iv_hide"
+        android:id="@+id/hideButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0"
         android:padding="10dp"
         android:src="@drawable/baseline_clear"
-        app:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-        app:layout_constraintEnd_toEndOf="@id/cl_video_container"
-        app:layout_constraintTop_toTopOf="@id/cl_video_container"
-        tools:alpha="1"
-
-        />
-
+        app:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+        app:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+        app:layout_constraintTop_toTopOf="@id/videoPlayerContainer"
+        tools:alpha="1" />
 
     <FrameLayout
-        android:id="@+id/fl_recycler_container"
+        android:id="@+id/recyclerViewContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cl_video_container" />
+        app:layout_constraintTop_toBottomOf="@id/videoPlayerContainer" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_player"
+        android:id="@+id/playerRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/fl_recycler_container"
-        app:layout_constraintEnd_toEndOf="@id/fl_recycler_container"
-        app:layout_constraintStart_toStartOf="@id/fl_recycler_container"
-        app:layout_constraintTop_toTopOf="@id/fl_recycler_container" />
+        app:layout_constraintBottom_toBottomOf="@id/recyclerViewContainer"
+        app:layout_constraintEnd_toEndOf="@id/recyclerViewContainer"
+        app:layout_constraintStart_toStartOf="@id/recyclerViewContainer"
+        app:layout_constraintTop_toTopOf="@id/recyclerViewContainer" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_view"
+        android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,4 +138,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav_manu" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</hs.project.comettube.ExoPlayerMotionLayout>
