--- a/app/src/main/res/xml/player_scene.xml
+++ b/app/src/main/res/xml/player_scene.xml
@@ -3,41 +3,56 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        constraintSetEnd="@+id/expand"
-        constraintSetStart="@+id/collapse"
+        motion:constraintSetEnd="@+id/expand"
+        motion:constraintSetStart="@+id/collapse"
         motion:duration="300"
-        motion:motionInterpolator="linear" >
-        <KeyFrameSet >
+        motion:motionInterpolator="linear">
+
+        <OnSwipe
+            motion:touchRegionId="@id/videoPlayerContainer"
+            motion:touchAnchorId="@id/videoPlayerContainer" />
+        <OnClick
+            motion:clickAction="transitionToEnd"
+            motion:targetId="@id/videoPlayerContainer" />
+
+        <KeyFrameSet>
             <KeyPosition
                 motion:curveFit="linear"
+                motion:framePosition="10"
+                motion:motionTarget="@+id/playerView"
                 motion:percentWidth="1"
-                motion:percentX="1"
-                motion:motionTarget="@+id/player_view"
-                motion:framePosition="10"
-                android:alpha="0" />
+                motion:percentX="1" />
+
             <KeyAttribute
-                motion:motionTarget="@+id/rv_player"
+                android:alpha="0"
                 motion:framePosition="25"
-                android:alpha="0" />
+                motion:motionTarget="@+id/playerRecyclerView" />
+
             <KeyAttribute
-                motion:motionTarget="@+id/tv_video_title"
+                android:alpha="0.1"
                 motion:framePosition="10"
-                android:alpha="0.1" />
+                motion:motionTarget="@+id/videoTitleTextView" />
+
             <KeyAttribute
-                motion:motionTarget="@+id/iv_hide"
+                android:alpha="0.1"
                 motion:framePosition="10"
-                android:alpha="0.1" />
+                motion:motionTarget="@+id/hideButton" />
             <KeyAttribute
-                motion:motionTarget="@+id/iv_control"
+                android:alpha="0.1"
                 motion:framePosition="10"
-                android:alpha="0.1" />
+                motion:motionTarget="@+id/controlButton" />
         </KeyFrameSet>
     </Transition>
+    <Transition
+        motion:constraintSetEnd="@+id/hide"
+        motion:constraintSetStart="@+id/collapse"
+        motion:duration="300" />
+
 
     <ConstraintSet android:id="@+id/expand">
 
         <Constraint
-            android:id="@+id/cl_video_container"
+            android:id="@id/videoPlayerContainer"
             android:layout_width="0dp"
             android:layout_height="0dp"
             motion:layout_constraintDimensionRatio="H,16:9"
@@ -46,68 +61,73 @@
             motion:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
-            android:id="@+id/player_view"
+            android:id="@id/playerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toEndOf="@id/cl_video_container"
-            motion:layout_constraintStart_toStartOf="@id/cl_video_container"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+            motion:layout_constraintStart_toStartOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
         <Constraint
-            android:id="@+id/tv_video_title"
+            android:id="@id/videoTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:alpha="0"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toStartOf="@id/iv_control"
-            motion:layout_constraintStart_toEndOf="@id/player_view"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/controlButton"
+            motion:layout_constraintStart_toEndOf="@id/playerView"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
         <Constraint
-            android:id="@+id/iv_control"
+            android:id="@id/controlButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toStartOf="@+id/iv_hide"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            android:visibility="invisible"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/hideButton"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
         <Constraint
-            android:id="@+id/iv_hide"
+            android:id="@id/hideButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toEndOf="@id/cl_video_container"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            android:visibility="invisible"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
         <Constraint
-            android:id="@+id/fl_recycler_container"
+            android:id="@id/recyclerViewContainer"
             android:layout_width="0dp"
             android:layout_height="0dp"
             motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@id/cl_video_container" />
+            motion:layout_constraintTop_toBottomOf="@id/videoPlayerContainer" />
+
 
         <Constraint
-            android:id="@+id/rv_player"
+            android:id="@id/playerRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toBottomOf="@id/fl_recycler_container"
-            motion:layout_constraintEnd_toEndOf="@id/fl_recycler_container"
-            motion:layout_constraintStart_toStartOf="@id/fl_recycler_container"
-            motion:layout_constraintTop_toTopOf="@id/fl_recycler_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/recyclerViewContainer"
+            motion:layout_constraintEnd_toEndOf="@id/recyclerViewContainer"
+            motion:layout_constraintStart_toStartOf="@id/recyclerViewContainer"
+            motion:layout_constraintTop_toTopOf="@id/recyclerViewContainer" />
+
 
         <Constraint
-            android:id="@+id/bottom_nav_view"
+            android:id="@id/bottomNavigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="parent" />
+
 
     </ConstraintSet>
 
@@ -115,79 +135,162 @@
     <ConstraintSet android:id="@+id/collapse">
 
         <Constraint
-            android:id="@+id/cl_video_container"
+            android:id="@id/videoPlayerContainer"
             android:layout_width="0dp"
             android:layout_height="54dp"
-            motion:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
+            motion:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent" />
 
         <Constraint
-            android:id="@+id/player_view"
+            android:id="@id/playerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
             motion:layout_constraintDimensionRatio="H,1:2.5"
-            motion:layout_constraintStart_toStartOf="@id/cl_video_container"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintStart_toStartOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
 
         <Constraint
-            android:id="@+id/tv_video_title"
+            android:id="@id/videoTitleTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:alpha="1"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toStartOf="@id/iv_control"
-            motion:layout_constraintStart_toEndOf="@id/player_view"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/controlButton"
+            motion:layout_constraintStart_toEndOf="@id/playerView"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
 
         <Constraint
-            android:id="@+id/iv_control"
+            android:id="@id/controlButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="1"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toStartOf="@+id/iv_hide"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/hideButton"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
 
         <Constraint
-            android:id="@+id/iv_hide"
+            android:id="@id/hideButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="1"
-            motion:layout_constraintBottom_toBottomOf="@id/cl_video_container"
-            motion:layout_constraintEnd_toEndOf="@id/cl_video_container"
-            motion:layout_constraintTop_toTopOf="@id/cl_video_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
 
         <Constraint
-            android:id="@+id/fl_recycler_container"
+            android:id="@id/recyclerViewContainer"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            motion:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
+            motion:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintTop_toBottomOf="@id/cl_video_container" />
+            motion:layout_constraintTop_toBottomOf="@id/videoPlayerContainer" />
+
 
         <Constraint
-            android:id="@+id/rv_player"
+            android:id="@id/playerRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:alpha="0"
-            motion:layout_constraintBottom_toBottomOf="@id/fl_recycler_container"
-            motion:layout_constraintEnd_toEndOf="@id/fl_recycler_container"
-            motion:layout_constraintStart_toStartOf="@id/fl_recycler_container"
-            motion:layout_constraintTop_toTopOf="@id/fl_recycler_container" />
+            motion:layout_constraintBottom_toBottomOf="@id/recyclerViewContainer"
+            motion:layout_constraintEnd_toEndOf="@id/recyclerViewContainer"
+            motion:layout_constraintStart_toStartOf="@id/recyclerViewContainer"
+            motion:layout_constraintTop_toTopOf="@id/recyclerViewContainer" />
 
         <Constraint
-            android:id="@+id/bottom_nav_view"
+            android:id="@id/bottomNavigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent"
-            motion:layout_constraintBottom_toBottomOf="parent" />
+            motion:layout_constraintStart_toStartOf="parent" />
 
     </ConstraintSet>
 
 
+    <ConstraintSet android:id="@+id/hide">
+        <Constraint
+            android:id="@id/videoPlayerContainer"
+            android:layout_width="0dp"
+            android:layout_height="54dp"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="@id/bottomNavigationView" />
+
+        <Constraint
+            android:id="@id/playerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintDimensionRatio="H,1:2.5"
+            motion:layout_constraintStart_toStartOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
+
+        <Constraint
+            android:id="@id/videoTitleTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:alpha="1"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/controlButton"
+            motion:layout_constraintStart_toEndOf="@id/playerView"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
+        <Constraint
+            android:id="@id/controlButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="1"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toStartOf="@id/hideButton"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
+
+        <Constraint
+            android:id="@id/hideButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="1"
+            motion:layout_constraintBottom_toBottomOf="@id/videoPlayerContainer"
+            motion:layout_constraintEnd_toEndOf="@id/videoPlayerContainer"
+            motion:layout_constraintTop_toTopOf="@id/videoPlayerContainer" />
+
+
+        <Constraint
+            android:id="@id/recyclerViewContainer"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/videoPlayerContainer" />
+
+
+        <Constraint
+            android:id="@id/playerRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:alpha="0"
+            motion:layout_constraintBottom_toBottomOf="@id/recyclerViewContainer"
+            motion:layout_constraintEnd_toEndOf="@id/recyclerViewContainer"
+            motion:layout_constraintStart_toStartOf="@id/recyclerViewContainer"
+            motion:layout_constraintTop_toTopOf="@id/recyclerViewContainer" />
+
+        <Constraint
+            android:id="@id/bottomNavigationView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent" />
+
+    </ConstraintSet>
 </MotionScene>
